# deployments-web

./: README.md  deployments-server.cabal  stack.yaml
app/: Api.hs  LibUtils.hs  Main.hs
app/v1/: Api.hs
app/v1/projects/: Api.hs  Schema.hs
app/v1/projects/actions/: Create.hs
src/: DeployAppConfig.hs  Lib.hs  Project.hs
