name:                deployments-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/deployments-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable deployments-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Api
                     , V1.Api
                     , V1.Projects.Api
                     , V1.Projects.Schema
                     , V1.Projects.Actions.Create
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , deployments-server
                     , servant >= 0.9.1.1 && < 0.11
                     , servant-server
                     , warp == 3.2.*
  default-language:    Haskell2010

test-suite deployments-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , deployments-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/deployments-server
